--- a/app/src/main/res/layout/activity_acceso.xml
+++ b/app/src/main/res/layout/activity_acceso.xml
@@ -12,6 +12,21 @@
             android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/toolbar"
+            android:background="#C5CAE9"
+        />
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_below="@id/tab_layout"
+            android:background="#ffffff" />
+
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_acceso" />
