--- a/app/src/main/res/layout/content_juego.xml
+++ b/app/src/main/res/layout/content_juego.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/app_bar_juego" tools:context="com.mychess.mychess.Juego">
+    tools:showIn="@layout/app_bar_juego" tools:context="com.mychess.mychess.Juego"
+    android:background="#3F51B5">
 
     <ImageView
         android:layout_width="45dp"
