--- a/app/src/main/res/layout/content_juego.xml
+++ b/app/src/main/res/layout/content_juego.xml
@@ -834,4 +834,13 @@
         android:layout_alignParentStart="true"
         android:textSize="10dp" />
 
+    <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
+        android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:src="@drawable/micro_microphone_4764"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/d1"
+        android:layout_toLeftOf="@+id/textView5"
+        android:layout_toStartOf="@+id/textView5" />
+
 </RelativeLayout>
