--- a/app/src/main/res/menu/juego.xml
+++ b/app/src/main/res/menu/juego.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    <item android:id="@+id/rendir" android:title="@string/rendirse"
+        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/tablas" android:title="@string/tablas"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
