agregados elementos al menú de amigos

--- a/app/src/main/res/layout/content_amigos.xml
+++ b/app/src/main/res/layout/content_amigos.xml
@@ -9,4 +9,12 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_amigos" tools:context="com.mychess.mychess.Amigos">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="No tienes amigos,\nhas click en el botón + \nde la barra de arriba para agregar uno"
+        android:id="@+id/textView17"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
