--- a/app/src/main/res/layout/content_juego.xml
+++ b/app/src/main/res/layout/content_juego.xml
@@ -838,9 +838,29 @@
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:src="@drawable/micro_microphone_4764"
-        android:layout_marginTop="25dp"
+        android:layout_below="@+id/textView18"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Small Text"
+        android:id="@+id/textView18"
+        android:textColor="#fcfefc"
+        android:layout_marginTop="24dp"
         android:layout_below="@+id/d1"
-        android:layout_toLeftOf="@+id/textView5"
-        android:layout_toStartOf="@+id/textView5" />
+        android:layout_alignLeft="@+id/textView4"
+        android:layout_alignStart="@+id/textView4"
+        android:textSize="20dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView2"
+        android:src="@drawable/time"
+        android:layout_above="@+id/fab"
+        android:layout_toRightOf="@+id/c1"
+        android:layout_toEndOf="@+id/c1" />
 
 </RelativeLayout>
