--- a/app/src/main/res/layout/content_juego.xml
+++ b/app/src/main/res/layout/content_juego.xml
@@ -845,7 +845,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
+        android:text="cuenta"
         android:id="@+id/textView18"
         android:textColor="#fcfefc"
         android:layout_marginTop="24dp"
