--- a/app/src/main/res/layout/content_juego.xml
+++ b/app/src/main/res/layout/content_juego.xml
@@ -838,8 +838,9 @@
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:src="@drawable/micro_microphone_4764"
-        android:layout_below="@+id/textView18"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/textView13"
+        android:layout_toRightOf="@+id/textView18"
+        android:layout_toEndOf="@+id/textView18" />
 
     <TextView
         android:layout_width="wrap_content"
