--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="origen">#f974a1</color>
+    <color name="destino">#f9397b</color>
+    <color name="casillnegra">#7986CB</color>
+    <color name="casillablanca">#C5CAE9</color>
 </resources>
