Renombrados TextView de las casillas

--- a/app/src/main/res/layout/content_juego.xml
+++ b/app/src/main/res/layout/content_juego.xml
@@ -626,7 +626,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="a"
-        android:id="@+id/textView"
+        android:id="@+id/columnaa"
         android:textColor="#580410"
         android:textStyle="bold"
         android:layout_alignBottom="@+id/a1"
@@ -639,11 +639,11 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="b"
-        android:id="@+id/textView2"
+        android:id="@+id/columnab"
         android:textColor="#580410"
         android:textStyle="bold"
-        android:layout_alignBaseline="@+id/textView"
-        android:layout_alignBottom="@+id/textView"
+        android:layout_alignBaseline="@+id/columnaa"
+        android:layout_alignBottom="@+id/columnaa"
         android:layout_toLeftOf="@+id/c1"
         android:layout_toStartOf="@+id/c1"
         android:textSize="10dp" />
@@ -653,11 +653,11 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="c"
-        android:id="@+id/textView3"
+        android:id="@+id/columnac"
         android:textColor="#580410"
         android:textStyle="bold"
-        android:layout_alignBaseline="@+id/textView2"
-        android:layout_alignBottom="@+id/textView2"
+        android:layout_alignBaseline="@+id/columnab"
+        android:layout_alignBottom="@+id/columnab"
         android:layout_toLeftOf="@+id/d2"
         android:layout_toStartOf="@+id/d2"
         android:textSize="10dp" />
@@ -667,11 +667,11 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="d"
-        android:id="@+id/textView4"
+        android:id="@+id/columnad"
         android:textColor="#580410"
         android:textStyle="bold"
-        android:layout_alignBaseline="@+id/textView5"
-        android:layout_alignBottom="@+id/textView5"
+        android:layout_alignBaseline="@+id/columnae"
+        android:layout_alignBottom="@+id/columnae"
         android:layout_toLeftOf="@+id/e2"
         android:layout_toStartOf="@+id/e2"
         android:textSize="10dp" />
@@ -681,11 +681,11 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="e"
-        android:id="@+id/textView5"
+        android:id="@+id/columnae"
         android:textColor="#580410"
         android:textStyle="bold"
-        android:layout_alignBaseline="@+id/textView3"
-        android:layout_alignBottom="@+id/textView3"
+        android:layout_alignBaseline="@+id/columnac"
+        android:layout_alignBottom="@+id/columnac"
         android:layout_toLeftOf="@+id/f1"
         android:layout_toStartOf="@+id/f1"
         android:textSize="10dp" />
@@ -695,7 +695,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="f"
-        android:id="@+id/textView6"
+        android:id="@+id/columnaf"
         android:textColor="#580410"
         android:textStyle="bold"
         android:layout_alignBottom="@+id/f1"
@@ -708,11 +708,11 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="g"
-        android:id="@+id/textView7"
+        android:id="@+id/columnag"
         android:textColor="#580410"
         android:textStyle="bold"
-        android:layout_alignBaseline="@+id/textView6"
-        android:layout_alignBottom="@+id/textView6"
+        android:layout_alignBaseline="@+id/columnaf"
+        android:layout_alignBottom="@+id/columnaf"
         android:layout_toLeftOf="@+id/h1"
         android:layout_toStartOf="@+id/h1"
         android:textSize="10dp" />
@@ -722,7 +722,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="h"
-        android:id="@+id/textView8"
+        android:id="@+id/columnah"
         android:textColor="#580410"
         android:textStyle="bold"
         android:layout_alignBottom="@+id/h1"
@@ -735,7 +735,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="1"
-        android:id="@+id/textView9"
+        android:id="@+id/fila1"
         android:textColor="#050505"
         android:textStyle="bold"
         android:layout_below="@+id/a2"
@@ -748,7 +748,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="2"
-        android:id="@+id/textView10"
+        android:id="@+id/fila2"
         android:textColor="#050505"
         android:textStyle="bold"
         android:layout_below="@+id/a3"
@@ -761,7 +761,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="3"
-        android:id="@+id/textView11"
+        android:id="@+id/fila3"
         android:textColor="#050505"
         android:textStyle="bold"
         android:layout_below="@+id/a4"
@@ -774,7 +774,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="4"
-        android:id="@+id/textView12"
+        android:id="@+id/fila4"
         android:textColor="#050505"
         android:textStyle="bold"
         android:layout_below="@+id/a5"
@@ -787,7 +787,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="5"
-        android:id="@+id/textView13"
+        android:id="@+id/fila5"
         android:textColor="#050505"
         android:textStyle="bold"
         android:layout_below="@+id/a6"
@@ -800,7 +800,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="6"
-        android:id="@+id/textView14"
+        android:id="@+id/fila6"
         android:textColor="#050505"
         android:textStyle="bold"
         android:layout_below="@+id/a7"
@@ -813,7 +813,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="7"
-        android:id="@+id/textView15"
+        android:id="@+id/fila7"
         android:textColor="#050505"
         android:textStyle="bold"
         android:layout_below="@+id/a8"
@@ -826,7 +826,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="8"
-        android:id="@+id/textView16"
+        android:id="@+id/fila8"
         android:textColor="#050505"
         android:textStyle="bold"
         android:layout_alignParentTop="true"
@@ -850,8 +850,8 @@
         android:textColor="#fcfefc"
         android:layout_marginTop="24dp"
         android:layout_below="@+id/d1"
-        android:layout_alignLeft="@+id/textView4"
-        android:layout_alignStart="@+id/textView4"
+        android:layout_alignLeft="@+id/columnad"
+        android:layout_alignStart="@+id/columnad"
         android:textSize="20dp" />
 
     <ImageView
