cambiado el tamaño del texto

--- a/app/src/main/res/layout/content_amigos.xml
+++ b/app/src/main/res/layout/content_amigos.xml
@@ -16,5 +16,6 @@
         android:text="No tienes amigos,\nhas click en el botón + \nde la barra de arriba para agregar uno"
         android:id="@+id/textView17"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="15dp" />
 </RelativeLayout>
