cambio en el id del menú

--- a/app/src/main/res/menu/menu_amigos.xml
+++ b/app/src/main/res/menu/menu_amigos.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:yourapp="http://schemas.android.com/apk/res-auto" >
     <!-- Search, should appear as action button -->
-    <item android:id="@+id/action_search"
+    <item android:id="@+id/agregar"
         android:icon="@drawable/mas"
         android:title="buscar"
         yourapp:showAsAction="ifRoom"  />
