--- a/app/src/main/res/layout/nav_header_juego.xml
+++ b/app/src/main/res/layout/nav_header_juego.xml
@@ -15,6 +15,7 @@
 
     <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing" android:text="Nombre de usuario"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:id="@+id/nombreUsuario" />
 
 </LinearLayout>
