--- a/app/src/main/res/layout/registro_fragment.xml
+++ b/app/src/main/res/layout/registro_fragment.xml
@@ -7,9 +7,9 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:ems="10"
-        android:id="@+id/editText3"
+        android:id="@+id/regUsuario"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="47dp"
@@ -22,10 +22,10 @@
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/editText4"
-        android:layout_below="@+id/editText3"
-        android:layout_alignLeft="@+id/editText3"
-        android:layout_alignStart="@+id/editText3"
+        android:id="@+id/regEmail"
+        android:layout_below="@+id/regUsuario"
+        android:layout_alignLeft="@+id/regUsuario"
+        android:layout_alignStart="@+id/regUsuario"
         android:layout_marginTop="20dp"
         android:hint="email"
         android:textColorHint="#C5CAE9"
@@ -36,10 +36,10 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText5"
-        android:layout_below="@+id/editText4"
-        android:layout_alignLeft="@+id/editText4"
-        android:layout_alignStart="@+id/editText4"
+        android:id="@+id/regClave"
+        android:layout_below="@+id/regEmail"
+        android:layout_alignLeft="@+id/regEmail"
+        android:layout_alignStart="@+id/regEmail"
         android:layout_marginTop="20dp"
         android:hint="contraseña"
         android:textColorHint="#C5CAE9"
@@ -50,10 +50,10 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText6"
-        android:layout_below="@+id/editText5"
-        android:layout_alignLeft="@+id/editText5"
-        android:layout_alignStart="@+id/editText5"
+        android:id="@+id/regClave2"
+        android:layout_below="@+id/regClave"
+        android:layout_alignLeft="@+id/regClave"
+        android:layout_alignStart="@+id/regClave"
         android:layout_marginTop="20dp"
         android:hint="repetir contraseña"
         android:textColorHint="#C5CAE9"
@@ -63,14 +63,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Registrarse"
-        android:id="@+id/button2"
-        android:layout_below="@+id/editText6"
+        android:id="@+id/btnRegistro"
+        android:layout_below="@+id/regClave2"
         android:layout_marginTop="20dp"
         android:background="@color/colorPrimary"
-        android:layout_alignRight="@+id/editText6"
-        android:layout_alignEnd="@+id/editText6"
-        android:layout_alignLeft="@+id/editText6"
-        android:layout_alignStart="@+id/editText6"
+        android:layout_alignRight="@+id/regClave2"
+        android:layout_alignEnd="@+id/regClave2"
+        android:layout_alignLeft="@+id/regClave2"
+        android:layout_alignStart="@+id/regClave2"
         android:textStyle="bold"
         android:textColor="#ffffff" />
 </RelativeLayout>
